--- a/app/scss/_body.scss
+++ b/app/scss/_body.scss
@@ -1,10 +1,15 @@
 .body{
     display: flex;
-    gap: 1rem;
+    gap: 2vw;
+    @include breakpoint-down(medium){
+        flex-direction: column-reverse;
+        gap: 0;
+    }
     &__left{
+
         display: grid;
-        grid-template-columns: 78% 19%;
-        grid-template-rows: repeat(15, 6vw);
+        grid-template-columns: 73% 6vw;
+        grid-template-rows: repeat(15, 7vw);
         grid-template-areas: 
         "A A"
         "B C"
@@ -21,8 +26,47 @@
         "V W"
         "X Y"
         "Z AA";
+        gap: 1vw;
+        width: calc(30% + 1vw);
+        
+        @include breakpoint-down(medium){
+            width: 100%;
+            grid-template-columns: 40% 10% 40% 10% ;
+            grid-template-rows: repeat(9, 10vw);
+            grid-template-areas: 
+        "A A A A"
+        "B C D E"
+        "F G H I"
+        "J K L M"
+        "N N N N"
+        "O P Q R"
+        "X X X X"
+        "S T U V"
+        "Y Z 0 1";
         gap: 10px;
-        width: 30%;
+
+
+        }
+        @include breakpoint-down(small){
+            grid-template-columns: 80% 20%;
+            grid-template-rows: repeat(15, 20vw);
+            grid-template-areas: 
+            "A A"
+            "B C"
+            "D E"
+            "F G"
+            "H I"
+            "J K"
+            "L M"
+            "N N"
+            "O P"
+            "Q R"
+            "S S"
+            "T U"
+            "V W"
+            "X Y"
+            "Z AA";
+        }
 
         &__title__1{
             grid-area: A;
@@ -32,15 +76,69 @@
         }
         &__title__3{
             grid-area: S;
+            @include breakpoint-down(medium){
+                grid-area: X;
+            }
+            @include breakpoint-down(small){
+                grid-area: S;
+            }
         }
         &__title__1, &__title__2, &__title__3{
             display: flex;
             align-items: center;
             justify-content: center;
             width: 100%;
+            @include breakpoint-down(medium){
+                text-align: center;
+            }
+            
         }
         &__logo{
             background-color: $lightBlue;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain;
+            background-origin: content-box;
+            padding: 0.5rem;
+            border-radius: 5px;
+            transition: scale 200ms ease-in-out;
+            
+            &__1{
+                background-image: url(/images/Enovia.png);
+            }
+            &__2{
+                background-image: url(/images/ptcwindchill.png);
+            }
+            &__3{
+                background-image: url(/images/3Dexperience.png);
+            }
+            &__4{
+                background-image: url(/images/solidworks-250x250.png);
+            }
+            &__5{
+                background-image: url(/images/Visual_Studio_Code_1.35_icon.svg.png);
+            }
+            &__6{
+                background-image: url(/images/Microsoft_Office_logo.svg.png);
+            }
+            &__7{
+                background-image: url(/images/france-flag-logo-DBC61B59A7-seeklogo.com.png);
+            }
+            &__8{
+                background-image: url(/images/serviette-de-plage-union-jack-drapeau-anglais-175.png);
+            }
+            &__9{
+                background-image: url(/images/philippines3g.png);
+            }
+            &__10{
+                background-image: url(/images/kitesurf.png);
+            }
+            &__11{
+                background-image: url(/images/handball.png);
+            }
+            &__12{
+                background-image: url(/images/arduino.png);
+            }
         }
         &__skill{
             background-color: $lightBlue;
@@ -48,6 +146,8 @@
             align-items: center;
             color: white;
             padding: 1rem;
+            border-radius: 5px;
+            
         }
     }
     &__right{
@@ -66,7 +166,11 @@
         "N N"
         "O P"
         "Q R";
-        gap: 10px;
+        gap: 1vw;
+        @include breakpoint-down(medium){
+            width: 100%;
+            gap: 10px;
+        }
         &__title__1{
             grid-area: A;
         }
@@ -77,14 +181,78 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            @include breakpoint-down(medium){
+                text-align: center;
+            }
         }
         &__logo{
             width: 100%;
             height: 100%;
-            background-color: $lightGrey
+            background-color: $lightGrey;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain;
+            background-origin: content-box;
+            padding: 1rem;
+            border-radius: 5px;
+            &__1{
+                background-image: url(/images/TCS_Logo.png);
+            }
+            &__2{
+                background-image: url(/images/TCS_Logo.png);
+            }
+            &__3{
+                background-image: url(/images/cnim.png);
+            }
+            &__4{
+                background-image: url(/images/640px-Logo_Bureau_Veritas.svg.png);
+            }
+            &__5{
+                background-image: url(/images/Tsinghua_University_Logo.svg.png);
+            }
+            &__6{
+                background-image: url(/images/IHEDN.png);
+            }
+            &__7{
+                background-image: url(/images/Logo_Groupe_INP.png);
+            }
+            &__8{
+                background-image: url(/images/logo-aristide-briandpng.png);
+            }
         }
         &__experience{
             background-color: $lightGrey;
+            border-radius: 5px;
+            padding: 1.5vw;
+            h3{
+                margin-bottom: 0.5rem;
+            }
+            h4{
+                margin-bottom: 1rem;
+                font-size: 1.3rem;
+                font-style: italic;
+            }
+            p{
+
+            }
+        }
+    }
+    h2{
+        font-size: 2.5rem;
+        @include breakpoint-down(medium){
+            font-size: 2rem;
+        }
+    }
+    h3{
+        font-size: 2rem;
+        @include breakpoint-down(medium){
+            font-size: 1.5rem;
+        }
+        small{
+            font-size: 1rem;
+            @include breakpoint-down(medium){
+                font-size: 0.8rem;
+            }
         }
     }
 }
