update img path for live

--- a/app/scss/_body.scss
+++ b/app/scss/_body.scss
@@ -104,40 +104,40 @@
             transition: scale 200ms ease-in-out;
             
             &__1{
-                background-image: url(/images/Enovia.png);
+                background-image: url(../../images/Enovia.png);
             }
             &__2{
-                background-image: url(/images/ptcwindchill.png);
+                background-image: url(../../images/ptcwindchill.png);
             }
             &__3{
-                background-image: url(/images/3Dexperience.png);
+                background-image: url(../../images/3Dexperience.png);
             }
             &__4{
-                background-image: url(/images/solidworks-250x250.png);
+                background-image: url(../../images/solidworks-250x250.png);
             }
             &__5{
-                background-image: url(/images/Visual_Studio_Code_1.35_icon.svg.png);
+                background-image: url(../../images/Visual_Studio_Code_1.35_icon.svg.png);
             }
             &__6{
-                background-image: url(/images/Microsoft_Office_logo.svg.png);
+                background-image: url(../../images/Microsoft_Office_logo.svg.png);
             }
             &__7{
-                background-image: url(/images/france-flag-logo-DBC61B59A7-seeklogo.com.png);
+                background-image: url(../../images/france-flag-logo-DBC61B59A7-seeklogo.com.png);
             }
             &__8{
-                background-image: url(/images/serviette-de-plage-union-jack-drapeau-anglais-175.png);
+                background-image: url(../../images/serviette-de-plage-union-jack-drapeau-anglais-175.png);
             }
             &__9{
-                background-image: url(/images/philippines3g.png);
+                background-image: url(../../images/philippines3g.png);
             }
             &__10{
-                background-image: url(/images/kitesurf.png);
+                background-image: url(../../images/kitesurf.png);
             }
             &__11{
-                background-image: url(/images/handball.png);
+                background-image: url(../../images/handball.png);
             }
             &__12{
-                background-image: url(/images/arduino.png);
+                background-image: url(../../images/arduino.png);
             }
         }
         &__skill{
@@ -196,28 +196,28 @@
             padding: 1rem;
             border-radius: 5px;
             &__1{
-                background-image: url(/images/TCS_Logo.png);
+                background-image: url(../../images/TCS_Logo.png);
             }
             &__2{
-                background-image: url(/images/TCS_Logo.png);
+                background-image: url(../../images/TCS_Logo.png);
             }
             &__3{
-                background-image: url(/images/cnim.png);
+                background-image: url(../../images/cnim.png);
             }
             &__4{
-                background-image: url(/images/640px-Logo_Bureau_Veritas.svg.png);
+                background-image: url(../../images/640px-Logo_Bureau_Veritas.svg.png);
             }
             &__5{
-                background-image: url(/images/Tsinghua_University_Logo.svg.png);
+                background-image: url(../../images/Tsinghua_University_Logo.svg.png);
             }
             &__6{
-                background-image: url(/images/IHEDN.png);
+                background-image: url(../../images/IHEDN.png);
             }
             &__7{
-                background-image: url(/images/Logo_Groupe_INP.png);
+                background-image: url(../../images/Logo_Groupe_INP.png);
             }
             &__8{
-                background-image: url(/images/logo-aristide-briandpng.png);
+                background-image: url(../../images/logo-aristide-briandpng.png);
             }
         }
         &__experience{
