--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -231,51 +231,51 @@
 }
 
 .body__left__logo__1 {
-  background-image: url(/images/Enovia.png);
+  background-image: url(../../images/Enovia.png);
 }
 
 .body__left__logo__2 {
-  background-image: url(/images/ptcwindchill.png);
+  background-image: url(../../images/ptcwindchill.png);
 }
 
 .body__left__logo__3 {
-  background-image: url(/images/3Dexperience.png);
+  background-image: url(../../images/3Dexperience.png);
 }
 
 .body__left__logo__4 {
-  background-image: url(/images/solidworks-250x250.png);
+  background-image: url(../../images/solidworks-250x250.png);
 }
 
 .body__left__logo__5 {
-  background-image: url(/images/Visual_Studio_Code_1.35_icon.svg.png);
+  background-image: url(../../images/Visual_Studio_Code_1.35_icon.svg.png);
 }
 
 .body__left__logo__6 {
-  background-image: url(/images/Microsoft_Office_logo.svg.png);
+  background-image: url(../../images/Microsoft_Office_logo.svg.png);
 }
 
 .body__left__logo__7 {
-  background-image: url(/images/france-flag-logo-DBC61B59A7-seeklogo.com.png);
+  background-image: url(../../images/france-flag-logo-DBC61B59A7-seeklogo.com.png);
 }
 
 .body__left__logo__8 {
-  background-image: url(/images/serviette-de-plage-union-jack-drapeau-anglais-175.png);
+  background-image: url(../../images/serviette-de-plage-union-jack-drapeau-anglais-175.png);
 }
 
 .body__left__logo__9 {
-  background-image: url(/images/philippines3g.png);
+  background-image: url(../../images/philippines3g.png);
 }
 
 .body__left__logo__10 {
-  background-image: url(/images/kitesurf.png);
+  background-image: url(../../images/kitesurf.png);
 }
 
 .body__left__logo__11 {
-  background-image: url(/images/handball.png);
+  background-image: url(../../images/handball.png);
 }
 
 .body__left__logo__12 {
-  background-image: url(/images/arduino.png);
+  background-image: url(../../images/arduino.png);
 }
 
 .body__left__skill {
@@ -355,35 +355,35 @@
 }
 
 .body__right__logo__1 {
-  background-image: url(/images/TCS_Logo.png);
+  background-image: url(../../images/TCS_Logo.png);
 }
 
 .body__right__logo__2 {
-  background-image: url(/images/TCS_Logo.png);
+  background-image: url(../../images/TCS_Logo.png);
 }
 
 .body__right__logo__3 {
-  background-image: url(/images/cnim.png);
+  background-image: url(../../images/cnim.png);
 }
 
 .body__right__logo__4 {
-  background-image: url(/images/640px-Logo_Bureau_Veritas.svg.png);
+  background-image: url(../../images/640px-Logo_Bureau_Veritas.svg.png);
 }
 
 .body__right__logo__5 {
-  background-image: url(/images/Tsinghua_University_Logo.svg.png);
+  background-image: url(../../images/Tsinghua_University_Logo.svg.png);
 }
 
 .body__right__logo__6 {
-  background-image: url(/images/IHEDN.png);
+  background-image: url(../../images/IHEDN.png);
 }
 
 .body__right__logo__7 {
-  background-image: url(/images/Logo_Groupe_INP.png);
+  background-image: url(../../images/Logo_Groupe_INP.png);
 }
 
 .body__right__logo__8 {
-  background-image: url(/images/logo-aristide-briandpng.png);
+  background-image: url(../../images/logo-aristide-briandpng.png);
 }
 
 .body__right__experience {
